# scala_learning

./: .gitignore  README.md  build.sbt  local_scala_setup.md  pyproject.toml  scala_learning.code-workspace  scalastyle-config.xml  start_jupyter.sh
data_structures/graphs/: 1_introduction.ipynb  readme.md
design_patterns/: README.md
design_patterns/creational/: singleton.ipynb
lang_docs/1_scala_beginner_udemy/: course_info.md
lang_docs/1_scala_beginner_udemy/1_basics/: 1_variables_and_types.md  2_expressions.md  3_functions.md  4_type_inference.md  5_recursion.md  6_call_by_value_vs_name.md  7_default_and_named_arguments.md  8_smart_operations_on_strings.md
lang_docs/1_scala_beginner_udemy/2_oo_basics/: 10_packaging_and_imports.md  1_oo_basics.md  2_method_notations.md  3_objects.md  4_inheritance.md  (+5 more)
lang_docs/design_patterns/: README.md
lang_docs/scala_for_the_impatient/: 10_traits.ipynb  11_operators.ipynb  12_higher_order_functions.ipynb  13_collections.ipynb  14_pattern_matching.ipynb  15_annotations.ipynb  17_futures.ipynb  18_type_parameters.ipynb  1_scala_basics.ipynb  21_implicits.ipynb  2_control_structures_and_functions.ipynb  3_arrays.ipynb  4_maps_and_tuples.ipynb  5_classes.ipynb  6_objects.ipynb  7_packages_and_imports.ipynb  8_inheritance.ipynb  9_files_and_regex.ipynb  apache_toree_kernel_sample.ipynb  scala_hello_world_notebook.ipynb
misc/: generics.md  import_from_local_maven_cache.ipynb  jvm_memory_model.md  logging.md  scaladoc.md  testing_with_scalatest.md  withFilter_vs_filter.md
tryouts/: elasticsearch.ipynb  kantan_csv.ipynb
(+127 files in other folders)
