[tool.poetry]
authors = ["girish pasupathy <girishpasupathy@gmail.com>"]
description = "Notebooks on various problems using machine learning."
license = "MIT"
name = "Scala on jupyter"
version = "0.1.0"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
jupyter-http-over-ws = "^0.0.8"
jupyterthemes = "^0.20.0"
# poetry add gitrepo --git ssh://git@github.com/myorganization/myprivaterepo.git
toree = {git = "https://github.com/apache/incubator-toree.git", branch = "master"}

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
